SERVER-30857 Support unknown Linux distributions